2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in: Add support for ATmega168P.

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in: Fix abbreviated name for ATmega324PA.

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Lech Perczak:
	bug #30946: Added support for ATmega8/16/32U2
	* avrdude.conf.in: Add ATmega8/16/32U2 entries.

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David A Lyons:
	patch #7393: Adding ATtiny4313 Device to avrdude.conf.in
	* avrdude.conf.in: Add ATtiny4313 data.

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usb_libusb.c: Bump timeout values to allow for slow clock
	speeds.
	* jtagmkII.c: (Ditto.)

2011-03-04  Eric B. Weddington  <eric.weddington@atmel.com>

	Thanks to Vitaly Chernookiy for the patch.
	* avrdude.conf.in: Add support for atmega324pa.
	* ChangeLog-2010: New file, rotate ChangeLog for new year.